# personal-knowledge-garden

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
src/garden/agent/: base.py  edges.py  graph.py  roles.py  state.py
src/garden/cli/: app.py  chat.py  clear.py  config.py  export.py  forget.py  ideate.py  ingest.py  links.py  migrate_embeddings.py  review.py  search.py  sessions.py  sources.py  status.py  surprise.py
src/garden/core/: config.py  exceptions.py  llm_utils.py  logging.py  models.py
src/garden/ingestion/: chunker.py  embedder.py  loader.py
src/garden/knowledge/: concept_extractor.py  idea_generator.py  insight_engine.py  linker.py
src/garden/prompts/: _base_role.j2  _macros.j2  concept_extract.j2  flashcard_generate.j2  generator.j2  grader.j2  ideate.j2  insight.j2  loader.py  rewriter.j2  role_analyst.j2  role_creative.j2  role_general.j2  role_researcher.j2  role_router.j2  (+3 more)
tests/: conftest.py  test_agent_edges.py  test_card_store.py  test_chat_dragdrop.py  test_chat_store.py  test_chunker.py  test_cli.py  test_cli_config.py  test_config.py  test_database.py  test_exceptions.py  test_export.py  test_graph_store.py  test_improvements.py  test_ingest_duplicate.py  test_linker.py  test_linker_semantic.py  test_llm_modules.py  test_llm_utils.py  test_loader.py  test_logging.py  test_migrate_embeddings.py  test_models.py  test_prompts.py  test_property.py  test_reviewer.py  test_roles.py  test_scheduler.py  test_search.py  test_search_semantic.py  test_sessions.py  test_sources.py  test_transaction.py  test_ui.py  test_vector_store.py
(+19 files in other folders)
